certificate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: certificate
