gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cafe
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    port: 8000
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 8443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: cafe-secret
        namespace: certificate
    allowedRoutes:
      namespaces:
        from: All
